--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,22 @@ matrix:
         - CFLAGS="-Os"
         - LDFLAGS="-Wl,--no-undefined -lm"
         - QMAKEFLAGS="-config release"
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - sourceline: 'ppa:beineri/opt-qt596-trusty'
+          packages:
+            - qt59base valgrind
+            - g++-7
+            - doxygen
+      env:
+        - QMAKESPEC=linux-g++
+        - EVAL="CC=gcc-7 && CXX=g++-7"
+        - CFLAGS="-Os"
+        - LDFLAGS="-Wl,--no-undefined -lm"
+        - QMAKEFLAGS="-config release"
 install:
 script:
   - PATH=`echo /opt/qt*/bin`:$PATH
