--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
         apt:
           sources:
           packages:
-            - qtbase5-dbg qtbase5-dev
+            - qt4-dev-tools
             - valgrind
             - gcc g++
             - doxygen
@@ -17,69 +17,6 @@ matrix:
         - CFLAGS="-Os"
         - LDFLAGS="-Wl,--no-undefined -lm"
         - QMAKEFLAGS="-config release"
-    - os: linux
-      dist: trusty
-      addons:
-        apt:
-          sources:
-          packages:
-            - qtbase5-dbg qtbase5-dev
-            - valgrind
-            - clang
-            - doxygen
-      env:
-        - QMAKESPEC=linux-clang
-        - EVAL="CC=clang && CXX=clang++"
-        - PATH=$PATH:/usr/local/clang/bin
-        - CFLAGS="-Oz"
-        - LDFLAGS="-Wl,--no-undefined -lm"
-        - QMAKEFLAGS="-config release"
-        - MAKEFLAGS=-s
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - sourceline: 'ppa:beineri/opt-qt596-trusty'
-          packages:
-            - qt59base valgrind
-            - g++-7
-            - doxygen
-      env:
-        - QMAKESPEC=linux-g++
-        - EVAL="CC=gcc-7 && CXX=g++-7"
-        - CFLAGS="-Os"
-        - LDFLAGS="-Wl,--no-undefined -lm"
-        - QMAKEFLAGS="-config release"
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - sourceline: 'ppa:beineri/opt-qt596-trusty'
-          packages:
-            - qt59base
-      env:
-        - QMAKESPEC=linux-clang
-        - EVAL="CC=clang-5.0 && CXX=clang++"
-        - PATH=$PATH:/usr/local/clang/bin
-        - CFLAGS="-Oz"
-        - LDFLAGS="-Wl,--no-undefined -lm"
-        - QMAKEFLAGS="-config release"
-        - MAKEFLAGS=-s
-    - os: linux
-      env:
-        - QMAKESPEC=linux-gcc-freestanding
-        - EVAL="CXX=false"
-        - CFLAGS="-ffreestanding -Os"
-        - LDFLAGS="-Wl,--no-undefined -lm"
-    - os: linux
-      env:
-        - QMAKESPEC=linux-gcc-no-math
-        - EVAL="CXX=false && touch src/math.h src/float.h"
-        - CFLAGS="-ffreestanding -DCBOR_NO_FLOATING_POINT -Os"
-        - LDFLAGS="-Wl,--no-undefined"
-        - LDLIBS=""
 install:
 script:
   - PATH=`echo /opt/qt*/bin`:$PATH
