--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
         - QMAKESPEC=linux-g++
         - EVAL="CC=gcc && CXX=g++"
         - CFLAGS="-Os"
+        - CXXFLAGS=-std="c++11"
         - LDFLAGS="-Wl,--no-undefined -lm"
         - QMAKEFLAGS="-config release"
 install:
