--- a/Makefile.nmake
+++ b/Makefile.nmake
@@ -5,6 +5,7 @@ TINYCBOR_SOURCES = \
 	src\cborerrorstrings.c \
 	src\cborencoder.c \
 	src\cborencoder_close_container_checked.c \
+	src\cborencoder_float.c \
 	src\cborparser.c \
 	src\cborparser_dup_string.c \
 	src\cborparser_float.c \
@@ -15,6 +16,7 @@ TINYCBOR_OBJS = \
 	src\cborerrorstrings.obj \
 	src\cborencoder.obj \
 	src\cborencoder_close_container_checked.obj \
+	src\cborencoder_float.obj \
 	src\cborparser.obj \
 	src\cborparser_dup_string.obj \
 	src\cborparser_float.obj \
